Removed all contractions.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vincent Wu
-description: The world needs automation and I'm here to help!
+description: The world needs automation and I am here to help!
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-leap-day
