Added resume that removed a blank newline.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ google_analytics:
 theme: jekyll-theme-leap-day
 home: ./index.html
 about: ./about.html
-resume: https://drive.google.com/file/d/1MHtBRn9sGjqYMSEWqrsDbrL8pNKvdHoQ/view?usp=sharing
+resume: https://drive.google.com/open?id=1w0nzg3tHEL7ek0NiIaQde8L3yOd3dYDv
 linkedin: https://www.linkedin.com/in/vincentwu1998/
 github_profile: https://github.com/VincentWu1998
 github:
